--- a/src/index.html
+++ b/src/index.html
@@ -2,31 +2,31 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Crop_logoRedLion.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Офисные таблички</title>
   </head>
   <body class="container">
-    <header class='row mb-5 mt-5'>
+    <header class='row'>
         <div class='col-sm-4'>
             <div class="text-center">
-                <img src="/logo.svg" class="img-fluid" alt="">
+                <img src="/Crop_logoRedLion.svg" class="img-fluid" alt="logo369" style="height: 250px">
             </div>
         </div>
-        <div class='col-sm-8'>
-            <div class="card">
+        <div class='col-sm-8 d-flex align-items-center'>
+            <div class="card container-fluid">
                 <div class="card-body">
                     <h1 class="text-center">Кабинет 308</h1>
                 </div>
             </div>
         </div>
     </header>
-    <main class='row mb-5'>
+    <main class='row mb-2'>
         <div class='col-sm-4'>
             <h5 class="mb-4 text-center">
                 Расписание уроков в кабинете 15 января 2023
             </h5>
-            <div class="btn-group mb-5" role="group" aria-label="Basic radio toggle button group">
+            <div class="btn-group mb-4" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="day" id="day1" autocomplete="off">
                 <label class="btn btn-outline-primary" for="day1">Пн</label>
                 <input type="radio" class="btn-check" name="day" id="day2" autocomplete="off" checked>
@@ -55,12 +55,20 @@
         <div class='col-sm-8'>
             <div class="card">
                 <div class="card-header">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h2 class="card-title mb-4">Урок №4 (11:20-12:00)</h2>
+                    <div class="card-text">
+                        <h3>Геометрия</h3>
+                        <h4>Учитель: Черноусова Светлана Владимировна</h4>
+                        <p>Класс на уроке: 9Б</p>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <div class="card-body fw-semibold flex-column d-flex align-items-end">
+                    <h4 class="card-title mb-5 align-self-center">Следующий урок №5 (12:10-12:50)</h4>
+                    <div class="card-text">
+                        <p>Основы безопасности жизнедеятельности</p>
+                        <p>Учитель: Пчёлкин Константин Сергеевич</p>
+                        <p>7А класс</p>
+                    </div>
                 </div>
             </div>
         </div>
