--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,18 @@
         <div class='col-sm-8 d-flex align-items-center'>
             <div class="card container-fluid">
                 <div class="card-body">
-                    <h1 class="text-center">Кабинет 308</h1>
+                    <h1 class="text-center cabinet"></h1>
                 </div>
             </div>
         </div>
     </header>
     <main class='row mb-2'>
         <div class='col-sm-4'>
-            <h5 class="mb-4 text-center">
-                Расписание уроков в кабинете 15 января 2023
+            <h5 class="text-center">
+                Расписание уроков
+            </h5>
+            <h5 class="text-center mb-4">
+                15 января 2023
             </h5>
             <div class="btn-group mb-4" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="day" id="day1" autocomplete="off">
@@ -58,7 +61,7 @@
                     <h2 class="card-title mb-4">Урок №4 (11:20-12:00)</h2>
                     <div class="card-text">
                         <h3>Геометрия</h3>
-                        <h4>Учитель: Черноусова Светлана Владимировна</h4>
+                        <h4>Учитель: Чернаускас Светлана Владимировна</h4>
                         <p>Класс на уроке: 9Б</p>
                     </div>
                 </div>
