--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         <div class='col-sm-8'>
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title mb-4">Урок №4 (11:20-12:00)</h2>
+                    <h2 class="card-title mb-4 time">Урок №4 (11:20-12:00)</h2>
                     <div class="card-text">
                         <h3>Геометрия</h3>
                         <h4>Учитель: Чернаускас Светлана Владимировна</h4>
