--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <h5 class="text-center">
                 Расписание уроков
             </h5>
-            <h5 class="text-center mb-4">
+            <h5 class="text-center choose-date mb-4">
                 15 января 2023
             </h5>
             <div class="btn-group mb-4 choose-day" role="group" aria-label="Выбор дня">
