--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 Расписание уроков
             </h5>
             <h5 class="text-center choose-date mb-4">
-                15 января 2023
+                <!-- 15 января 2023 -->
             </h5>
             <div class="btn-group mb-4 choose-day" role="group" aria-label="Выбор дня">
             </div>
@@ -46,17 +46,17 @@
                 <div class="card-header">
                     <h2 class="card-title mb-4 time current-lesson">Урок №4 (11:20-12:00)</h2>
                     <div class="card-text">
-                        <h3 class="current-lesson-lesson">Геометрия</h3>
-                        <h4 class="current-lesson-teacher">Учитель: Чернаускас Светлана Владимировна</h4>
-                        <p class="current-lesson-class">Класс на уроке: 9Б</p>
+                        <h3 class="current-lesson-lesson"></h3>
+                        <h4 class="current-lesson-teacher"></h4>
+                        <p class="current-lesson-class"></p>
                     </div>
                 </div>
                 <div class="card-body fw-semibold flex-column d-flex align-items-end">
-                    <h4 class="card-title mb-5 align-self-center next-lesson">Следующий урок №5 (12:10-12:50)</h4>
+                    <h4 class="card-title mb-5 align-self-center next-lesson"></h4>
                     <div class="card-text">
-                        <p class="next-lesson-lesson">Основы безопасности жизнедеятельности</p>
-                        <p class="next-lesson-teacher">Учитель: Пчёлкин Константин Сергеевич</p>
-                        <p class="next-lesson-class">7А класс</p>
+                        <p class="next-lesson-lesson"></p>
+                        <p class="next-lesson-teacher"></p>
+                        <p class="next-lesson-class"></p>
                     </div>
                 </div>
             </div>
