--- a/src/index.html
+++ b/src/index.html
@@ -26,25 +26,17 @@
             <h5 class="text-center">
                 Расписание уроков
             </h5>
-            <h5 class="text-center choose-date mb-4">
-                <!-- 15 января 2023 -->
+            <h5 class="text-center mb-4 choose-date">
             </h5>
             <div class="btn-group mb-4 choose-day" role="group" aria-label="Выбор дня">
             </div>
             <div class="choose-time list-group list-group-numbered">
-<!--                <button type="button" class="list-group-item list-group-item-action">8:30 - 9:10</button>-->
-<!--                <button type="button" class="list-group-item list-group-item-action active" aria-current="true">8:30 - 9:10</button>-->
-<!--                <button type="button" class="list-group-item list-group-item-action">8:30 - 9:10</button>-->
-<!--                <button type="button" class="list-group-item list-group-item-action">8:30 - 9:10</button>-->
-<!--                <button type="button" class="list-group-item list-group-item-action">8:30 - 9:10</button>-->
-<!--                <button type="button" class="list-group-item list-group-item-action">8:30 - 9:10</button>-->
-<!--                <button type="button" class="list-group-item list-group-item-action">8:30 - 9:10</button>-->
             </div>
         </div>
         <div class='col-sm-8'>
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title mb-4 time current-lesson">Урок №4 (11:20-12:00)</h2>
+                    <h2 class="card-title mb-4 time current-lesson"></h2>
                     <div class="card-text">
                         <h3 class="current-lesson-lesson"></h3>
                         <h4 class="current-lesson-teacher"></h4>
