Изменил обработку тела

--- a/src/index.html
+++ b/src/index.html
@@ -34,23 +34,7 @@
             </div>
         </div>
         <div class='col-sm-8'>
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title mb-4 time current-lesson"></h2>
-                    <div class="card-text">
-                        <h3 class="current-lesson-lesson"></h3>
-                        <h4 class="current-lesson-teacher"></h4>
-                        <p class="current-lesson-class"></p>
-                    </div>
-                </div>
-                <div class="card-body fw-semibold flex-column d-flex align-items-end">
-                    <h4 class="card-title mb-5 align-self-center next-lesson"></h4>
-                    <div class="card-text">
-                        <p class="next-lesson-lesson"></p>
-                        <p class="next-lesson-teacher"></p>
-                        <p class="next-lesson-class"></p>
-                    </div>
-                </div>
+            <div class="card lessons-card">
             </div>
         </div>
     </main>
