--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             </h5>
             <div class="btn-group mb-4 choose-day" role="group" aria-label="Выбор дня">
             </div>
-            <div class="choose-time list-group list-group-numbered">
+            <div class="choose-time list-group">
             </div>
         </div>
         <div class='col-sm-8'>
