--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,7 @@
     <title>Офисные таблички</title>
   </head>
   <body class="container">
-    <header class='row'>
-        <div class='col-sm-4'>
-            <div class="text-center">
-                <img src="/Crop_logoRedLion.svg" class="img-fluid" alt="logo369" style="height: 250px">
-            </div>
-        </div>
-        <div class='col-sm-8 d-flex align-items-center'>
-            <div class="card container-fluid">
-                <div class="card-body">
-                    <h1 class="text-center cabinet"></h1>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main class='row mb-2'>
+    <main class='row mt-2'>
         <div class='col-sm-4'>
             <h5 class="text-center">
                 Расписание уроков
@@ -34,6 +20,14 @@
             </div>
         </div>
         <div class='col-sm-8'>
+            <div class="card container-fluid mb-2">
+                <div class="card-body d-flex align-items-center">
+                    <h1 class="cabinet"></h1>
+                    <div class="ms-auto logo-block">
+                        <img src="/logoBlue.svg" class="img-fluid" alt="Лицей 369">
+                    </div>
+                </div>
+            </div>
             <div class="card lessons-card">
             </div>
         </div>
